--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
 # YOLOv5 requirements
-# Usage: pip install -r requirements.txt
 
 # Base ------------------------------------------------------------------------
 gitpython>=3.1.30
 matplotlib>=3.3
 numpy>=1.18.5
-opencv-python>=4.1.1
+opencv-python-headless>=4.1.1  # Replaced opencv-python with opencv-python-headless
 Pillow>=7.1.2
-psutil  # system resources
+psutil
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-thop>=0.1.1  # FLOPs computation
-torch>=1.7.0  # see https://pytorch.org/get-started/locally (recommended)
+thop>=0.1.1
+torch>=1.7.0
 torchvision>=0.8.1
 tqdm>=4.64.0
 ultralytics>=8.0.111
-# protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging ---------------------------------------------------------------------
 # tensorboard>=2.4.1
@@ -27,23 +25,23 @@ ultralytics>=8.0.111
 pandas>=1.1.4
 seaborn>=0.11.0
 
-# Export ----------------------------------------------------------------------
-# coremltools>=6.0  # CoreML export
-# onnx>=1.10.0  # ONNX export
-# onnx-simplifier>=0.4.1  # ONNX simplifier
-# nvidia-pyindex  # TensorRT export
-# nvidia-tensorrt  # TensorRT export
-# scikit-learn<=1.1.2  # CoreML quantization
-# tensorflow>=2.4.0  # TF exports (-cpu, -aarch64, -macos)
-# tensorflowjs>=3.9.0  # TF.js export
-# openvino-dev  # OpenVINO export
+# Export (optional) -----------------------------------------------------------
+# Uncomment if needed for export functionality
+# coremltools>=6.0
+# onnx>=1.10.0
+# onnx-simplifier>=0.4.1
+# nvidia-pyindex
+# nvidia-tensorrt
+# scikit-learn<=1.1.2
+# tensorflow>=2.4.0
+# tensorflowjs>=3.9.0
+# openvino-dev
 
 # Deploy ----------------------------------------------------------------------
-setuptools>=65.5.1 # Snyk vulnerability fix
-# tritonclient[all]~=2.24.0
+setuptools>=65.5.1
 
 # Extras ----------------------------------------------------------------------
-# ipython  # interactive notebook
-# mss  # screenshots
+# ipython
+# mss
 # albumentations>=1.0.3
-# pycocotools>=2.0.6  # COCO mAP
+# pycocotools>=2.0.6
