--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ torch>=1.7.0
 torchvision>=0.8.1
 tqdm>=4.64.0
 ultralytics>=8.0.111
+pyvirtualdisplay
+xvfbwrapper
 
 # Logging ---------------------------------------------------------------------
 # tensorboard>=2.4.1
