--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,15 @@ tqdm>=4.64.0
 ultralytics>=8.0.111
 pyvirtualdisplay
 xvfbwrapper
+Flask==3.0.3
+blinker==1.8.2
+click==8.1.7
+gunicorn==22.0.0
+itsdangerous==2.2.0
+Jinja2>=2.0
+MarkupSafe==2.1.5
+packaging==24.1
+Werkzeug==3.1.3
 
 # Logging ---------------------------------------------------------------------
 # tensorboard>=2.4.1
