--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 
 # Base ------------------------------------------------------------------------
 gitpython>=3.1.30
+altair==4.2.2
 matplotlib>=3.3
 numpy>=1.18.5
 opencv-python-headless # Replaced opencv-python with opencv-python-headless
